dfir_datalog_core/src/snapshots/hydroflow_datalog_core__tests__multiple_contributors@surface_graph.snap
---
source: dfir_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
2v1 = unique :: < 'tick > ();
5v1 = unique :: < 'tick > ();
7v1 = union ();
8v1 = unique :: < 'tick > ();
10v1 = source_stream (in1);
11v1 = source_stream (in2);
12v1 = for_each (| v | out . send (v) . unwrap ());
13v1 = map (| row : (_ , _ ,) | ((row . 0 , row . 1 ,) , ()));
14v1 = map (| (g , a) : ((_ , _ ,) , _) | (g . 0 , g . 1 ,));
15v1 = map (| row : (_ , _ ,) | ((row . 1 , row . 0 ,) , ()));
16v1 = map (| (g , a) : ((_ , _ ,) , _) | (g . 0 , g . 1 ,));

10v1 -> 2v1;
11v1 -> 5v1;
7v1 -> 8v1;
8v1 -> 12v1;
14v1 -> 7v1;
13v1 -> 14v1;
2v1 -> 13v1;
16v1 -> 7v1;
15v1 -> 16v1;
5v1 -> 15v1;

